# OCR

./: .__afs293D  .exrc  .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.old  README  final  h1.net  h2.net  hough.bpm  main.out  ot.net  test.net  test.txt  tests.sh  tmp  train.sh  ui.glade  ui.glade~
Backup/: h1.net  h2.net  ot.net
Include/CaMa/: caMa.h  structure.h
Include/Solver/: solving.h
Math/: cama.h
Solver/: Makefile
Src/: main.c
Src/CaMa/: CaMa.c  caMa.c
Src/Solver/: file.c  solving.c
Src/Treatment/: display.c  grayscale.c
assets/: generate.py
assets/Dataset/: data.txt  generate.py  lines.txt
assets/Test/: data.txt  data2.txt  decode.py  test.txt
include/CaMa/: caMa.h  structure.h
include/Input/: file.h  recompose.h
include/Interface/: gui.h
include/Recognition/: function.h  recognition.h
include/Solver/: file.h  solving.h
include/Struct/: filter.h  houghLines.h  image.h  line.h  linesArray.h  matrix.h  neuralNetwork.h  pixel.h  point.h  vector.h
include/Treatment/: blur.h  contrast.h  filter.h  gamma.h  grayscale.h  hough.h  houghTransform.h  image.h  morph.h  resize.h  rotation.h  sobel.h  square.h  thresolding.h
include/Xor/: function.h  xor.h
src/: main.c
src/CaMa/: caMa.c
src/Input/: file.c  recompose.c
src/Interface/: gui.c  gui.glade  main.c  ui.glade
src/Recognition/: recognition.c
src/Solver/: file.c  main.c  solving.c
src/Struct/: filter.c  houghLines.c  image.c  line.c  linesArray.c  matrix.c  neuralNetwork.c  pixel.c  point.c  vector.c
sudoku_solver/: Makefile  main.c  solver  sudoku_file.c
(+32 files in other folders)
